# nodding-pigeon

./: .gitignore  CITATION.cff  LICENSE  README.md  requirements.txt  setup.cfg  videofile.py  webcam.py
dgd/: __init__.py  _download.py  config.py  data.py  inference.py  model.py  video.py
hgd/: __init__.py  _data_collection.py  _download.py  config.py  data.py  inference.py  model.py  video.py
noddingpigeon/: __init__.py  _download.py  config.py  inference.py  model.py  video.py
tests/: _test.py  references.txt  run_code_checks.sh
training/: collect_data.py  collect_landmarks.py  landmarks.npz  train_model.py
