[metadata]
name = hgd
version = attr: hgd.__version__
author = attr: hgd.__author__
author_email = xtorch501@gmail.com
description = Detection and classification of head gestures in videos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhky/head-gesture-detection
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    gdown>=4.2.0
    mediapipe>=0.8.9.1
    numpy>=1.22.0
    opencv-python>=4.0.0.0
    tensorflow>=2.7.0

[options.package_data]
hgd = py.typed