[metadata]
name = noddingpigeon
version = attr: noddingpigeon.__version__
author = attr: noddingpigeon.__author__
author_email = bhky.dev@gmail.com
description = Detection and classification of head gestures in videos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhky/nodding-pigeon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    gdown>=4.2.0
    mediapipe>=0.8.9.1
    numpy>=1.22.0
    opencv-python>=4.0.0.0
    tensorflow>=2.7.0

[options.package_data]
noddingpigeon = py.typed
